feat: 코스 미들웨어 코드 추가
