# swagger.json
@@ -1,155 +1,158 @@
 {
     "swagger": "2.0",
     "info": {
-      "title": "API Documentation",
-      "version": "1.0.0"
+        "title": "API Documentation",
+        "version": "1.0.0"
     },
     "host": "localhost:8080",
     "basePath": "/v2",
-    "schemes": [
-      "http"
-    ],
+    "schemes": ["http"],
     "paths": {
-      "/api/login": {
-        "post": {
-          "summary": "로그인",
-          "description": "Performs user login",
-          "parameters": [
-            {
-              "name": "username",
-              "in": "formData",
-              "required": true,
-              "type": "string",
-              "description": "Username for login"
-            },
-            {
-              "name": "password",
-              "in": "formData",
-              "required": true,
-              "type": "string",
-              "description": "Password for login"
-            }
-            
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful login",
-              "schema": {
-                "type": "object",
-                "properties": {
-                    "status": {
-                    "type": "string",
-                    "example":  "sucess"
-                  },
-                  "message": {
-                    "type": "string",
-                    "example":"성공"
-                  },
-                  "data": {
-                    "type": "string",
-                    "example": "{token}"
-                  }
+        "/api/login": {
+            "post": {
+                "summary": "로그인",
+                "description": "사용자가 로그인할 수 있습니다.",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "로그인에 사용할 이메일 주소"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "로그인에 사용할 비밀번호"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "로그인 성공",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string",
+                                    "example": "success"
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "example": "성공"
+                                },
+                                "data": {
+                                    "type": "string",
+                                    "example": "{token}"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "이메일 또는 비밀번호를 확인해주세요."
+                    }
                 }
-              }
-            },
-            "401": {
-                "description": "Successful login",
-                "example": "아이디 또는 비밀번호를 확인해주세요."
             }
-          }
-        }
-      },
-      "/api/register": {
-        "post": {
-          "summary": "회원가입",
-          "description": "Creates a new course",
-          "parameters": [
-            {
-              "name": "courseName",
-              "in": "formData",
-              "required": true,
-              "type": "string",
-              "description": "Name of the course"
-            },
-            {
-              "name": "courseDescription",
-              "in": "formData",
-              "required": false,
-              "type": "string",
-              "description": "Description of the course"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Successful login",
-              "schema": {
-                "type": "object",
-                "properties": {
-                    "status":  {
-                    "type": "string",
-                    "example":  "sucess"
-                  },
-                  "user_password": {
-                    "type": "string",
-                    "example":  "회원가입 완료"
-
-                  },
-                  "user_name": {
-                    "type": "string",
-                    "description": "Authentication token"
-                  },
-                  "user_phone": {
-                    "type": "string",
-                    "description": "Authentication token"
-                  }
+        },
+        "/api/register": {
+            "post": {
+                "summary": "회원가입",
+                "description": "새로운 사용자를 등록합니다.",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "사용자의 이메일 주소"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "사용자의 비밀번호"
+                    },
+                    {
+                        "name": "name",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "사용자의 이름"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "사용자의 전화번호"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "회원가입 성공",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string",
+                                    "example": "success"
+                                },
+                                "message": {
+                                    "type": "string",
+                                    "example": "회원가입 완료"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "유효하지 않은 이메일 형식입니다."
+                    },
+                    "409": {
+                        "description": "중복된 이메일 입니다."
+                    }
                 }
-              }
-            },
-            "401": {
-              "description": "Invalid credentials"
             }
-          }
-        }
-      },
-      "/api/course": {
-        "post": {
-          "summary": "코스",
-          "description": "Creates a new course",
-          "parameters": [
-            {
-              "name": "courseName",
-              "in": "formData",
-              "required": true,
-              "type": "string",
-              "description": "Name of the course"
-            },
-            {
-              "name": "courseDescription",
-              "in": "formData",
-              "required": false,
-              "type": "string",
-              "description": "Description of the course"
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "Course created",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "courseId": {
-                    "type": "string",
-                    "description": "ID of the created course"
-                  }
+        },
+        "/api/course": {
+            "post": {
+                "summary": "코스",
+                "description": "Creates a new course",
+                "parameters": [
+                    {
+                        "name": "courseName",
+                        "in": "formData",
+                        "required": true,
+                        "type": "string",
+                        "description": "Name of the course"
+                    },
+                    {
+                        "name": "courseDescription",
+                        "in": "formData",
+                        "required": false,
+                        "type": "string",
+                        "description": "Description of the course"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Course created",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "courseId": {
+                                    "type": "string",
+                                    "description": "ID of the created course"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input data"
+                    }
                 }
-              }
-            },
-            "400": {
-              "description": "Invalid input data"
             }
-          }
         }
-      }
     }
-  }
-  
+}
